// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarNavigation > (Snapshot) renders flat nav items in compact mode 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 flex-col"
    data-testid="sidebar-navigation"
  >
    <div>
      <div
        class="flex w-full items-center overflow-hidden rounded-md border-(length:--border-width) hover:bg-background-secondary border-transparent"
        data-testid="sidebar-navigation-item"
      >
        <div
          class="flex size-8 shrink-0 items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-gauge"
            data-testid="dashboard-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 14 4-4"
            />
            <path
              d="M3.34 19a10 10 0 1 1 17.32 0"
            />
          </svg>
        </div>
        <span
          class="text-sm whitespace-nowrap transition-opacity duration-150 opacity-0"
        >
          Dashboard
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex w-full items-center overflow-hidden rounded-md border-(length:--border-width) hover:bg-background-secondary border-transparent"
        data-testid="sidebar-navigation-item"
      >
        <div
          class="flex size-8 shrink-0 items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            data-testid="favorites-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
        </div>
        <span
          class="text-sm whitespace-nowrap transition-opacity duration-150 opacity-0"
        >
          Favorites
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarNavigation > (Snapshot) renders flat nav items in normal mode 1`] = `
<DocumentFragment>
  <div
    class="flex flex-1 flex-col"
    data-testid="sidebar-navigation"
  >
    <div>
      <div
        class="flex w-full items-center overflow-hidden rounded-md border-(length:--border-width) hover:bg-background-secondary border-transparent"
        data-testid="sidebar-navigation-item"
      >
        <div
          class="flex size-8 shrink-0 items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-gauge"
            data-testid="dashboard-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 14 4-4"
            />
            <path
              d="M3.34 19a10 10 0 1 1 17.32 0"
            />
          </svg>
        </div>
        <span
          class="text-sm whitespace-nowrap transition-opacity duration-150 opacity-100"
        >
          Dashboard
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex w-full items-center overflow-hidden rounded-md border-(length:--border-width) hover:bg-background-secondary border-transparent"
        data-testid="sidebar-navigation-item"
      >
        <div
          class="flex size-8 shrink-0 items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            data-testid="favorites-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
        </div>
        <span
          class="text-sm whitespace-nowrap transition-opacity duration-150 opacity-100"
        >
          Favorites
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
